# mrs_gazebo_custom_drone_example

./: CMakeLists.txt  README.md  package.xml
ROMFS/px4fmu_common/init.d-posix/airframes/: 14001_my_drone  4041_my_drone
ROMFS/px4fmu_common/mixers/: quadrotor_h.main.mix  tricopter_y_plus.main.mix
models/my_drone/: model.config
models/my_drone/sdf/: custom_components.sdf.jinja  custom_macros.sdf.jinja  my_drone.sdf.jinja
tmux/: session.yml
tmux/config/: custom_config.yaml  platform_config.yaml  spawner_config.yaml
