<?xml version="1.0"?>
<package format="2">

  <name>mrs_gazebo_custom_drone_example</name>
  <version>1.0.0</version>
  <description>An example drone extending the MRS simulation</description>

  <author email="petr.stibinger@fel.cvut.cz">Petr Stibinger</author>
  <maintainer email="petr.stibinger@fel.cvut.cz">Petr Stibinger</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>mrs_uav_gazebo_simulation</depend>
  <depend>python3-jinja2</depend>
  <depend>gazebo_ros</depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
